--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,12 +7,9 @@ cloud:
 server:
   port: 80
 spring:
-  data:
-   mongodb:
-    port: 27017
-    host: localhost
-    database: domino_jfl_db
-    username: domino_jfl_user
-    password: domino_jfl_pass
-    authentication-database: domino_jfl_db
+  profiles:
+    active: dev
+  cloud:
+    config:
+      enabled: false
 
