--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>org.worldbuild.reactor</groupId>
 	<artifactId>reactive-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>latest</version>
 	<name>Reactive-Service</name>
 	<description>Demo project for Spring Boot</description>
 
